// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DelightfulSwitch > Snapshot Test > Small Size Switch Snapshot 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="delightful-switch delightful-switch-small acss-17xfzng css-dev-only-do-not-override-yotw4n css-var-r5"
    role="switch"
    type="button"
  >
    <div
      class="delightful-switch-handle"
    />
    <span
      class="delightful-switch-inner"
    >
      <span
        class="delightful-switch-inner-checked"
      />
      <span
        class="delightful-switch-inner-unchecked"
      />
    </span>
  </button>
</DocumentFragment>
`;

exports[`DelightfulSwitch > Snapshot Test > Switch Snapshot with Labels 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="delightful-switch acss-17xfzng css-dev-only-do-not-override-yotw4n css-var-r6"
    role="switch"
    type="button"
  >
    <div
      class="delightful-switch-handle"
    />
    <span
      class="delightful-switch-inner"
    >
      <span
        class="delightful-switch-inner-checked"
      >
        On
      </span>
      <span
        class="delightful-switch-inner-unchecked"
      >
        Off
      </span>
    </span>
  </button>
</DocumentFragment>
`;

exports[`DelightfulSwitch > Snapshot Test > Enabled Switch Snapshot 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="delightful-switch acss-17xfzng css-dev-only-do-not-override-yotw4n css-var-r2 delightful-switch-checked"
    role="switch"
    type="button"
  >
    <div
      class="delightful-switch-handle"
    />
    <span
      class="delightful-switch-inner"
    >
      <span
        class="delightful-switch-inner-checked"
      />
      <span
        class="delightful-switch-inner-unchecked"
      />
    </span>
  </button>
</DocumentFragment>
`;

exports[`DelightfulSwitch > Snapshot Test > Disabled and Enabled Switch Snapshot 1`] = `
<DocumentFragment>
  <button
    aria-checked="true"
    class="delightful-switch acss-17xfzng css-dev-only-do-not-override-yotw4n css-var-r4 delightful-switch-checked delightful-switch-disabled"
    disabled=""
    role="switch"
    type="button"
  >
    <div
      class="delightful-switch-handle"
    />
    <span
      class="delightful-switch-inner"
    >
      <span
        class="delightful-switch-inner-checked"
      />
      <span
        class="delightful-switch-inner-unchecked"
      />
    </span>
  </button>
</DocumentFragment>
`;

exports[`DelightfulSwitch > Snapshot Test > Disabled Switch Snapshot 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="delightful-switch acss-17xfzng css-dev-only-do-not-override-yotw4n css-var-r3 delightful-switch-disabled"
    disabled=""
    role="switch"
    type="button"
  >
    <div
      class="delightful-switch-handle"
    />
    <span
      class="delightful-switch-inner"
    >
      <span
        class="delightful-switch-inner-checked"
      />
      <span
        class="delightful-switch-inner-unchecked"
      />
    </span>
  </button>
</DocumentFragment>
`;

exports[`DelightfulSwitch > Snapshot Test > Default Switch Snapshot 1`] = `
<DocumentFragment>
  <button
    aria-checked="false"
    class="delightful-switch acss-17xfzng css-dev-only-do-not-override-yotw4n css-var-r1"
    role="switch"
    type="button"
  >
    <div
      class="delightful-switch-handle"
    />
    <span
      class="delightful-switch-inner"
    >
      <span
        class="delightful-switch-inner-checked"
      />
      <span
        class="delightful-switch-inner-unchecked"
      />
    </span>
  </button>
</DocumentFragment>
`;
